force-app/main/default/objects/Service_Member__c/Service_Member__c.object-meta.xml
<CustomObject>
    <label>Service Member</label>
    <nameField>
        <label>Service Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>