force-app/main/default/objects/Service_Member__c/fields/Extra_Charges__c.field-meta.xml
<CustomField>
    <fullName>Extra_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extra Charges</label>
    <type>Checkbox</type>
</CustomField>