force-app/main/default/objects/Service_Member__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Service Members</relationshipLabel>
    <relationshipName>Service_Members</relationshipName>
    <type>Lookup</type>
</CustomField>